--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
 		</script>
 	</div>
 </div>
+<h2 id="meeting"><a href="./gen/meeting.html">meeting</a></h2>
+<p>October 06, 2024 · 还没写完，这是草稿，大约写到两万字再精炼到三千</p>
+<h2 id="部分历史动态"><a href="./gen/history.html">部分历史动态</a></h2>
+<p>October 06, 2024 · 有部分有链接的</p>
 <h2 id="再见了魔法纪录剧情留存计划"><a
 href="./gen/fuckyou.html">再见了，魔法纪录剧情留存计划</a></h2>
 <p>June 11, 2024 · 就这</p>
