--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
 		</script>
 	</div>
 </div>
+<h2 id="冰月梨日常生存行动指南"><a
+href="./gen/daily2025.html">冰月梨日常生存行动指南</a></h2>
+<p>October 08, 2024 ·
+巨大的进步，因为太多分支不可预测，所以在取舍上拖了很久，我忽然觉得生活就像连连看，因为早上吃早餐有一个环节难以实现我就不想去（</p>
 <h2 id="meeting"><a href="./gen/meeting.html">meeting</a></h2>
 <p>October 06, 2024 · 还没写完，这是草稿，大约写到两万字再精炼到三千</p>
 <h2 id="部分历史动态"><a href="./gen/history.html">部分历史动态</a></h2>
